[WED-172] fixes with modal on mobile

--- a/engines/wedding-atelier/app/assets/stylesheets/wedding-atelier/components/react/_size-guide-modal.scss
+++ b/engines/wedding-atelier/app/assets/stylesheets/wedding-atelier/components/react/_size-guide-modal.scss
@@ -5,7 +5,11 @@
     width: 900px;
 
     @include screen-xs {
-      width: inherit;
+      width: 100%;
+    }
+
+    @include screen-sm {
+      width: 100%;
     }
 
   }
